// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a series properly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  padding: 20px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  width: 100%;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-weight: 600;
  font-size: 22px;
  line-height: 32px;
  color: white;
  text-align: center;
}

.c21 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 4px;
}

.c22 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c23 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  margin-bottom: 20px;
}

.c25 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c33 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 1em;
}

.c39 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  color: white;
  margin-bottom: 10px;
}

.c40 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 30px;
  margin-bottom: 20px;
}

.c16 {
  color: white;
}

.c17 {
  margin-bottom: 40px;
}

.c27 {
  margin-bottom: 10px;
  margin-left: 0px;
  width: 100%;
}

.c36 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 40px;
}

.c5 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  color: white;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c3 img {
  max-height: 34px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c3 .IconPlus-s1uyfpws-0 {
  margin: 0 20px;
}

.c3 .c4 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: relative;
  height: 52px;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 0;
}

.c6 {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: white;
}

.c6 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  z-index: 10;
}

.c35 {
  margin: 10px 20px 0 0;
}

.c35::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: white;
}

.c24 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
  margin-top: 5px;
}

.c42 {
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c42:hover {
  opacity: 0.6;
}

.c42:first-child {
  padding-left: 0;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c32 {
  width: 32px;
  height: 32px;
}

.c29 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c26 {
  position: relative;
  height: inherit;
  background: white;
}

.c18 {
  border: 1px solid;
  border-radius: 2px;
  color: white;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c18 .c28 {
  opacity: 1;
}

.c18:hover .c28 {
  opacity: 0.7;
}

.c30 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c30 svg {
  height: 40px;
}

.c8 {
  background-color: #000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c9 {
  background-image: url(https://artsy-media-uploads.s3.amazonaws.com/GXvnaBYBdP2z6LKIBQF7XA%2FArtboard.jpg);
  background-size: cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
}

.c10 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c44 {
  position: relative;
  width: 100%;
  color: white;
}

.c44 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,white 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c44 a:hover {
  color: white;
  opacity: .65;
}

.c44 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c44 p,
.c44 ul,
.c44 ol,
.c44 .paragraph,
.c44 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c44 p:first-child,
.c44 .paragraph:first-child,
.c44 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c44 p:last-child,
.c44 .paragraph:last-child,
.c44 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c44 ul,
.c44 ol {
  padding-left: 1em;
}

.c44 ul {
  list-style: disc;
}

.c44 ol {
  list-style: decimal;
}

.c44 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c44 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c44 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c44 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c44 h2 a {
  background-size: 1.25px 1px;
}

.c44 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c44 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c44 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c44 h3 a {
  background-size: 1.25px 1px;
}

.c44 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c44 .preventLineBreak {
  white-space: nowrap;
}

.c44 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c44 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c44 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c44 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c14 {
  color: white;
  text-align: center;
}

.c14 .PartnerBlock__ImageContainer-ydgi2-1 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c14 .PartnerBlock__ImageContainer-ydgi2-1 img {
  margin-left: auto;
  margin-right: auto;
}

.c15 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

.c12 {
  max-width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
}

.c12 .c13 {
  margin-bottom: 90px;
}

.c0 {
  color: white;
}

.c0 .c11 {
  padding: 90px 20px 150px;
}

@media screen and (min-width:40em) {
  .c19 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media screen and (min-width:52em) {
  .c19 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c19 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c19 {
    padding: 20px;
  }
}

@media screen and (min-width:52em) {
  .c19 {
    padding: 30px;
  }
}

@media screen and (min-width:64em) {
  .c19 {
    padding: 30px;
  }
}

@media screen and (min-width:40em) {
  .c20 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:52em) {
  .c20 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:64em) {
  .c20 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:40em) {
  .c20 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c20 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c20 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c37 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c37 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c37 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c38 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c38 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c38 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c43 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c43 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c43 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c22 {
    font-size: 28px;
  }
}

@media screen and (min-width:52em) {
  .c22 {
    font-size: 42px;
  }
}

@media screen and (min-width:64em) {
  .c22 {
    font-size: 42px;
  }
}

@media screen and (min-width:40em) {
  .c22 {
    line-height: 36px;
  }
}

@media screen and (min-width:52em) {
  .c22 {
    line-height: 50px;
  }
}

@media screen and (min-width:64em) {
  .c22 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c23 {
    font-size: 18px;
  }
}

@media screen and (min-width:52em) {
  .c23 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c23 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c23 {
    line-height: 26px;
  }
}

@media screen and (min-width:52em) {
  .c23 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c23 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c39 {
    margin-bottom: 10px;
  }
}

@media screen and (min-width:52em) {
  .c39 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:64em) {
  .c39 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:40em) {
  .c40 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c40 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c40 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:40em) {
  .c17 {
    margin-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c27 {
    margin-bottom: 10px;
    margin-left: 0px;
  }
}

@media screen and (min-width:52em) {
  .c27 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:64em) {
  .c27 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:40em) {
  .c27 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c27 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c27 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c36 {
    padding-top: 40px;
  }
}

@media screen and (min-width:52em) {
  .c36 {
    padding-top: 60px;
  }
}

@media (max-width:720px) {
  .c3 img {
    max-height: 24px;
  }

  .c3 .c4 {
    font-size: 24px;
  }

  .c3 .IconPlus-s1uyfpws-0 {
    margin: 0 10px;
  }
}

@media (max-width:900px) {
  .c30 svg {
    height: 30px;
  }
}

@media (max-width:600px) {
  .c44 p,
  .c44 ul,
  .c44 ol,
  .c44 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c44 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c44 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c44 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c44 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c44 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c44 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c44 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c14 .PartnerBlock__ImageContainer-ydgi2-1 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c15 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="white"
>
  <div>
    <div
      className="c1 c2"
      color="white"
    >
      <div
        className="PartnerInline c3"
      >
        <a
          href="/"
        >
          <div
            className="c4 c5"
          >
            
          </div>
        </a>
        
      </div>
      <div
        className="rrm-container rrm-greaterThan-xs"
      >
        <div
          className="c6 c7"
          color="white"
          fontFamily={
            Object {
              "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
              "fontWeight": 600,
            }
          }
          fontSize="22px"
        >
          <a
            href="/magazine"
          >
            Artsy Editorial
          </a>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
  <div
    className="c8"
  >
    <div
      className="c9"
    />
    <div
      className="c10"
    />
  </div>
  <div
    className="c11 c12"
  >
    <div
      className="c13 c14"
      color="white"
    >
      <div
        className="c15"
      >
        The Future of Art
      </div>
    </div>
    <div
      className="c16"
      color="white"
    >
      <div
        className="c17"
      >
        <a
          className="ArticleCard c18"
          color="white"
          href="joanne-artman-gallery-poetry-naturerefinement-form"
          onClick={[Function]}
        >
          <div
            className="c19"
          >
            <div
              className="c20"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c21"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c22"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New Study Shows the Gender Pay Gap for Artists Is Not So Simple
                </div>
                <div
                  className="c23"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
                </div>
              </div>
              <div
                className="c24"
              >
                <div
                  className="c25"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  Aug 28, 2017
                </div>
              </div>
            </div>
            <div
              className="c26 c27"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c28 c29"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
              />
              <div
                className="c30 c31"
              >
                <svg
                  className="c32"
                  version="1.1"
                  viewBox="0 0 40 56"
                  x="0px"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <polygon
                      fill="white"
                      points="0 0 0 56 39.3600006 28"
                    />
                  </g>
                </svg>
                <div
                  className="c33"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  02:28
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        className="c17"
      >
        <a
          className="ArticleCard c18"
          color="white"
          href="new-yorks-next-art-district"
          onClick={[Function]}
        >
          <div
            className="c19"
          >
            <div
              className="c20"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c21"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c22"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New York's Next Art District
                </div>
                <div
                  className="c23"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  Land exhibitions, make influential contacts, and gain valuable feedback about your work.
                </div>
              </div>
              <div
                className="Byline c34"
                color="white"
              >
                <div
                  className="c25"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  <div
                    className="c35"
                    color="white"
                  >
                    Casey Lesser
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                    fontFamily={
                      Object {
                        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                        "fontWeight": 500,
                      }
                    }
                    fontSize="14px"
                  >
                    May 19, 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c26 c27"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c28 c29"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c36"
    >
      <div
        className="c37"
        color="white"
        width="100%"
      >
        <div
          className="c38"
          width={
            Array [
              1,
              1,
              0.3333333333333333,
              0.3333333333333333,
            ]
          }
        >
          <div>
            <div
              className="c39"
              color="white"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="28px"
            >
              About the Series
            </div>
            <div
              className="c40"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="18px"
            >
              <div
                className="c41"
              >
                <a
                  className="c42"
                  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Ffuture-of-art"
                  onClick={[Function]}
                  target="_blank"
                >
                  <svg
                    height="14px"
                    version="1.1"
                    viewBox="0 0 14 14"
                    width="14px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      stroke="none"
                      strokeWidth="1"
                    >
                      <path
                        d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                        fill="white"
                      />
                    </g>
                  </svg>
                </a>
                <a
                  className="c42"
                  href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Ffuture-of-art&text=undefined&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Ffuture-of-art&via=artsy"
                  onClick={[Function]}
                  target="_blank"
                >
                  <svg
                    height="14px"
                    version="1.1"
                    viewBox="0 0 16 14"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      stroke="none"
                      strokeWidth="1"
                    >
                      <path
                        d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                        fill="white"
                      />
                    </g>
                  </svg>
                </a>
                <a
                  className="c42"
                  href="mailto:?subject=undefined&body=Check out undefined on Artsy: https://www.artsy.net/article/future-of-art"
                  onClick={[Function]}
                  target="_blank"
                >
                  <svg
                    height="14px"
                    version="1.1"
                    viewBox="0 0 17 14"
                    width="17px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      stroke="none"
                      strokeWidth="1"
                    >
                      <path
                        d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                        fill="white"
                      />
                    </g>
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            className="rrm-container rrm-greaterThanOrEqual-md"
          />
        </div>
        <div
          className="c43"
          width={
            Array [
              1,
              1,
              0.6666666666666666,
              0.6666666666666666,
            ]
          }
        >
          <div
            className="SeriesAbout__description"
          >
            <div
              className="article__text-section c44"
              color="white"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="rrm-container rrm-lessThan-md"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a sponsored series properly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  padding: 20px;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0px;
  width: 100%;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c9 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-weight: 600;
  font-size: 22px;
  line-height: 32px;
  color: white;
  text-align: center;
}

.c27 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 4px;
}

.c28 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c29 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  margin-bottom: 20px;
}

.c31 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c39 {
  font-family: Unica77LLWebMedium,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 1em;
}

.c45 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  color: white;
  margin-bottom: 10px;
}

.c46 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 30px;
  margin-bottom: 20px;
}

.c22 {
  color: white;
}

.c23 {
  margin-bottom: 40px;
}

.c33 {
  margin-bottom: 10px;
  margin-left: 0px;
  width: 100%;
}

.c42 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 40px;
}

.c49 {
  margin-bottom: 4px;
}

.c52 {
  margin-top: 60px;
}

.c5 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  color: white;
}

.c7 {
  width: 15px;
  height: 15px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c3 img {
  max-height: 34px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c3 .c6 {
  margin: 0 20px;
}

.c3 .c4 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: relative;
  height: 52px;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 0;
}

.c8 {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: white;
}

.c8 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  z-index: 10;
}

.c41 {
  margin: 10px 20px 0 0;
}

.c41::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: white;
}

.c30 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
  margin-top: 5px;
}

.c48 {
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c48:hover {
  opacity: 0.6;
}

.c48:first-child {
  padding-left: 0;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c38 {
  width: 32px;
  height: 32px;
}

.c35 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c32 {
  position: relative;
  height: inherit;
  background: white;
}

.c24 {
  border: 1px solid;
  border-radius: 2px;
  color: white;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c24 .c34 {
  opacity: 1;
}

.c24:hover .c34 {
  opacity: 0.7;
}

.c36 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c36 svg {
  height: 40px;
}

.c10 {
  background-color: #000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c11 {
  background-image: url(https://artsy-media-uploads.s3.amazonaws.com/GXvnaBYBdP2z6LKIBQF7XA%2FArtboard.jpg);
  background-size: cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
}

.c12 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c18 {
  display: block;
}

.c21 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c19 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c51 {
  position: relative;
  width: 100%;
  color: white;
}

.c51 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,white 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c51 a:hover {
  color: white;
  opacity: .65;
}

.c51 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c51 p,
.c51 ul,
.c51 ol,
.c51 .paragraph,
.c51 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c51 p:first-child,
.c51 .paragraph:first-child,
.c51 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c51 p:last-child,
.c51 .paragraph:last-child,
.c51 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c51 ul,
.c51 ol {
  padding-left: 1em;
}

.c51 ul {
  list-style: disc;
}

.c51 ol {
  list-style: decimal;
}

.c51 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c51 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c51 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c51 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c51 h2 a {
  background-size: 1.25px 1px;
}

.c51 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c51 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c51 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c51 h3 a {
  background-size: 1.25px 1px;
}

.c51 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c51 .preventLineBreak {
  white-space: nowrap;
}

.c51 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c51 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c51 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c51 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c16 {
  color: white;
  text-align: center;
}

.c16 .c20 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c16 .c20 img {
  margin-left: auto;
  margin-right: auto;
}

.c17 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

.bhMdnS .c15 {
  margin-bottom: 90px;
}

.c14 {
  max-width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
}

.c14 .c15 {
  margin-bottom: 60px;
}

.c0 {
  color: white;
}

.c0 .c13 {
  padding: 90px 20px 150px;
}

@media screen and (min-width:40em) {
  .c25 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media screen and (min-width:52em) {
  .c25 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c25 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c25 {
    padding: 20px;
  }
}

@media screen and (min-width:52em) {
  .c25 {
    padding: 30px;
  }
}

@media screen and (min-width:64em) {
  .c25 {
    padding: 30px;
  }
}

@media screen and (min-width:40em) {
  .c26 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:52em) {
  .c26 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:64em) {
  .c26 {
    margin-bottom: 5px;
  }
}

@media screen and (min-width:40em) {
  .c26 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c26 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c26 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c43 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c43 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c43 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c44 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c44 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c44 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c50 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c50 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c50 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c28 {
    font-size: 28px;
  }
}

@media screen and (min-width:52em) {
  .c28 {
    font-size: 42px;
  }
}

@media screen and (min-width:64em) {
  .c28 {
    font-size: 42px;
  }
}

@media screen and (min-width:40em) {
  .c28 {
    line-height: 36px;
  }
}

@media screen and (min-width:52em) {
  .c28 {
    line-height: 50px;
  }
}

@media screen and (min-width:64em) {
  .c28 {
    line-height: 50px;
  }
}

@media screen and (min-width:40em) {
  .c29 {
    font-size: 18px;
  }
}

@media screen and (min-width:52em) {
  .c29 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c29 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c29 {
    line-height: 26px;
  }
}

@media screen and (min-width:52em) {
  .c29 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c29 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c45 {
    margin-bottom: 10px;
  }
}

@media screen and (min-width:52em) {
  .c45 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:64em) {
  .c45 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:40em) {
  .c46 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c46 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c46 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:40em) {
  .c23 {
    margin-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c33 {
    margin-bottom: 10px;
    margin-left: 0px;
  }
}

@media screen and (min-width:52em) {
  .c33 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:64em) {
  .c33 {
    margin-bottom: 0px;
    margin-left: 30px;
  }
}

@media screen and (min-width:40em) {
  .c33 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c33 {
    width: 50%;
  }
}

@media screen and (min-width:64em) {
  .c33 {
    width: 50%;
  }
}

@media screen and (min-width:40em) {
  .c42 {
    padding-top: 40px;
  }
}

@media screen and (min-width:52em) {
  .c42 {
    padding-top: 60px;
  }
}

@media (max-width:900px) {
  .c7 {
    width: 13px;
    height: 13px;
  }
}

@media (max-width:720px) {
  .c3 img {
    max-height: 24px;
  }

  .c3 .c4 {
    font-size: 24px;
  }

  .c3 .c6 {
    margin: 0 10px;
  }
}

@media (max-width:900px) {
  .c36 svg {
    height: 30px;
  }
}

@media (max-width:720px) {
  .c19 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c51 p,
  .c51 ul,
  .c51 ol,
  .c51 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c51 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c51 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c51 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c51 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c51 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c51 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c51 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c16 .c20 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c17 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="white"
>
  <div>
    <div
      className="c1 c2"
      color="white"
    >
      <div
        className="PartnerInline c3"
      >
        <a
          href="/"
        >
          <div
            className="c4 c5"
          >
            
          </div>
        </a>
        <svg
          className="c6 c7"
          version="1.1"
          viewBox="0 0 15 15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="2"
          >
            <g
              fill="white"
              transform="translate(-101.000000, -18.000000)"
            >
              <g
                transform="translate(101.000000, 18.000000)"
              >
                <rect
                  height="1"
                  width="15"
                  x="0"
                  y="7"
                />
                <rect
                  height="1"
                  transform="translate(7.500000, 7.500000) rotate(-90.000000) translate(-7.500000, -7.500000) "
                  width="15"
                  x="0"
                  y="7"
                />
              </g>
            </g>
          </g>
        </svg>
        <a
          href="http://artsy.net"
          onClick={[Function]}
          target="_blank"
        >
          <img
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
          />
        </a>
      </div>
      <div
        className="rrm-container rrm-greaterThan-xs"
      >
        <div
          className="c8 c9"
          color="white"
          fontFamily={
            Object {
              "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
              "fontWeight": 600,
            }
          }
          fontSize="22px"
        >
          <a
            href="/magazine"
          >
            Artsy Editorial
          </a>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
  <div
    className="c10"
  >
    <div
      className="c11"
    />
    <div
      className="c12"
    />
  </div>
  <div
    className="c13 c14"
  >
    <div
      className="c15 c16"
      color="white"
    >
      <div
        className="c17"
      >
        The Future of Art
      </div>
      <div
        className="PartnerBlock c18"
      >
        <div
          className="c19"
        >
          Presented in Partnership with
        </div>
        <div
          className="c20 c21"
        >
          <a
            href="http://artsy.net"
            onClick={[Function]}
            target="_blank"
          >
            <img
              src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="c22"
      color="white"
    >
      <div
        className="c23"
      >
        <a
          className="ArticleCard c24"
          color="white"
          href="joanne-artman-gallery-poetry-naturerefinement-form"
          onClick={[Function]}
        >
          <div
            className="c25"
          >
            <div
              className="c26"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c27"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c28"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New Study Shows the Gender Pay Gap for Artists Is Not So Simple
                </div>
                <div
                  className="c29"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
                </div>
              </div>
              <div
                className="c30"
              >
                <div
                  className="c31"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  Aug 28, 2017
                </div>
              </div>
            </div>
            <div
              className="c32 c33"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c34 c35"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
              />
              <div
                className="c36 c37"
              >
                <svg
                  className="c38"
                  version="1.1"
                  viewBox="0 0 40 56"
                  x="0px"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <polygon
                      fill="white"
                      points="0 0 0 56 39.3600006 28"
                    />
                  </g>
                </svg>
                <div
                  className="c39"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  02:28
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        className="c23"
      >
        <a
          className="ArticleCard c24"
          color="white"
          href="new-yorks-next-art-district"
          onClick={[Function]}
        >
          <div
            className="c25"
          >
            <div
              className="c26"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="c27"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="c28"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New York's Next Art District
                </div>
                <div
                  className="c29"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  Land exhibitions, make influential contacts, and gain valuable feedback about your work.
                </div>
              </div>
              <div
                className="Byline c40"
                color="white"
              >
                <div
                  className="c31"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  <div
                    className="c41"
                    color="white"
                  >
                    Casey Lesser
                  </div>
                </div>
                <div
                  className="c30"
                >
                  <div
                    className="c31"
                    fontFamily={
                      Object {
                        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                        "fontWeight": 500,
                      }
                    }
                    fontSize="14px"
                  >
                    May 19, 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c32 c33"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c34 c35"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c42"
    >
      <div
        className="c43"
        color="white"
        width="100%"
      >
        <div
          className="c44"
          width={
            Array [
              1,
              1,
              0.3333333333333333,
              0.3333333333333333,
            ]
          }
        >
          <div>
            <div
              className="c45"
              color="white"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="28px"
            >
              About the Series
            </div>
            <div
              className="c46"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="18px"
            >
              <div
                className="c47"
              >
                <a
                  className="c48"
                  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Ffuture-of-art"
                  onClick={[Function]}
                  target="_blank"
                >
                  <svg
                    height="14px"
                    version="1.1"
                    viewBox="0 0 14 14"
                    width="14px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      stroke="none"
                      strokeWidth="1"
                    >
                      <path
                        d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                        fill="white"
                      />
                    </g>
                  </svg>
                </a>
                <a
                  className="c48"
                  href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Ffuture-of-art&text=undefined&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Ffuture-of-art&via=artsy"
                  onClick={[Function]}
                  target="_blank"
                >
                  <svg
                    height="14px"
                    version="1.1"
                    viewBox="0 0 16 14"
                    width="16px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      stroke="none"
                      strokeWidth="1"
                    >
                      <path
                        d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                        fill="white"
                      />
                    </g>
                  </svg>
                </a>
                <a
                  className="c48"
                  href="mailto:?subject=undefined&body=Check out undefined on Artsy: https://www.artsy.net/article/future-of-art"
                  onClick={[Function]}
                  target="_blank"
                >
                  <svg
                    height="14px"
                    version="1.1"
                    viewBox="0 0 17 14"
                    width="17px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                      stroke="none"
                      strokeWidth="1"
                    >
                      <path
                        d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                        fill="white"
                      />
                    </g>
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            className="rrm-container rrm-greaterThanOrEqual-md"
          >
            <div
              className="c49"
            >
              <div
                className="PartnerBlock c18"
              >
                <div
                  className="c19"
                >
                  Presented in Partnership with
                </div>
                <div
                  className="c20 c21"
                >
                  <a
                    href="http://artsy.net"
                    onClick={[Function]}
                    target="_blank"
                  >
                    <img
                      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c50"
          width={
            Array [
              1,
              1,
              0.6666666666666666,
              0.6666666666666666,
            ]
          }
        >
          <div
            className="SeriesAbout__description"
          >
            <div
              className="article__text-section c51"
              color="white"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="rrm-container rrm-lessThan-md"
          >
            <div
              className="c52"
            >
              <div
                className="PartnerBlock c18"
              >
                <div
                  className="c19"
                >
                  Presented in Partnership with
                </div>
                <div
                  className="c20 c21"
                >
                  <a
                    href="http://artsy.net"
                    onClick={[Function]}
                    target="_blank"
                  >
                    <img
                      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
